# switchboard-plug-security-privacy

./: .travis.yml  CMakeLists.txt  INSTALL  README.md  meson.build
.github/workflows/: gettext.yml  main.yml
data/: CMakeLists.txt  autolock-elementary  autolock-elementary.desktop  elementary-dpms-helper  elementary-dpms-helper.desktop  icons.gresource.xml  io.elementary.switchboard.security-privacy.appdata.xml.in  io.elementary.switchboard.security-privacy.gschema.xml  io.elementary.switchboard.security-privacy.policy.in.in  meson.build  org.pantheon.security-privacy.gschema.xml  org.pantheon.security-privacy.policy  org.pantheon.security-privacy.policy.cmake  pantheon-security-privacy-plug.desktop  security-privacy-plug-helper  security-privacy.gschema.xml  security-privacy.metainfo.xml.in  security-privacy.policy.in.in  xautolock-elementary  xautolock-elementary.desktop
debian/: changelog  control  copyright  rules  switchboard-plug-security-privacy.install
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+162 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+160 more)
schemas/: CMakeLists.txt  org.pantheon.autolock.gschema.xml  org.pantheon.dpms.gschema.xml  org.pantheon.xautolock.gschema.xml
src/: AppChooser.vala  AppsDialog.vala  BlackList.vala  CMakeLists.txt  FirewallPanel.vala  Firewalld.vala  Interfaces.vala  LockPanel.vala  Permission.vala  Plug.vala  TrackPanel.vala  UFWHelpers.vala  Utilities.vala  ZGUtilities.vala  config.vala.in  meson.build  ufw-helpers.vala  xautolock-elementary
src/Backends/: AbstractFirewallBackend.vala  UFWBackend.vala
src/DBus/: PermissionStore.vala
src/Objects/: Rule.vala
src/Services/: Device.vala
src/Views/: FirewallPanel.vala  HouseKeepingPanel.vala  LocationPanel.vala  LockPanel.vala  TrackPanel.vala
src/Widgets/: AppChooser.vala  AppRow.vala  ClearUsageDialog.vala  ClearUsagePopover.vala  ExcludeTreeView.vala  IncludeTreeView.vala  ServiceItem.vala  ServiceList.vala
src/Widgets/Switchboard/: AbstractPage.vala  AbstractSimplePage.vala  HeaderLabel.vala  Sidebar.vala  SidebarRow.vala
